libqt6c/src/libqmetaobject.hpp

typedef struct QGenericArgument QGenericArgument;
typedef struct QGenericReturnArgument QGenericReturnArgument;
typedef struct QMetaEnum QMetaEnum;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaProperty QMetaProperty;
bool QMetaMethod_InvokeOnGadget12(const QMetaMethod* self, void* gadget, QGenericReturnArgument* returnValue, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4, QGenericArgument* val5, QGenericArgument* val6, QGenericArgument* val7, QGenericArgument* val8, QGenericArgument* val9);
bool QMetaMethod_InvokeOnGadget22(const QMetaMethod* self, void* gadget, QGenericArgument* val0);
bool QMetaMethod_InvokeOnGadget32(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1);
bool QMetaMethod_InvokeOnGadget42(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2);
bool QMetaMethod_InvokeOnGadget52(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3);
bool QMetaMethod_InvokeOnGadget62(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4);
bool QMetaMethod_InvokeOnGadget72(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4, QGenericArgument* val5);
bool QMetaMethod_InvokeOnGadget82(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4, QGenericArgument* val5, QGenericArgument* val6);
bool QMetaMethod_InvokeOnGadget92(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4, QGenericArgument* val5, QGenericArgument* val6, QGenericArgument* val7);
bool QMetaMethod_InvokeOnGadget102(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4, QGenericArgument* val5, QGenericArgument* val6, QGenericArgument* val7, QGenericArgument* val8);
bool QMetaMethod_InvokeOnGadget112(const QMetaMethod* self, void* gadget, QGenericArgument* val0, QGenericArgument* val1, QGenericArgument* val2, QGenericArgument* val3, QGenericArgument* val4, QGenericArgument* val5, QGenericArgument* val6, QGenericArgument* val7, QGenericArgument* val8, QGenericArgument* val9);
QMetaEnum* QMetaEnum_new(const QMetaEnum* other);
QMetaEnum* QMetaEnum_new2(QMetaEnum* other);
QMetaEnum* QMetaEnum_new3();
QMetaEnum* QMetaEnum_new4(const QMetaEnum* param1);
const char* QMetaEnum_Name(const QMetaEnum* self);
const char* QMetaEnum_EnumName(const QMetaEnum* self);
bool QMetaEnum_IsFlag(const QMetaEnum* self);
bool QMetaEnum_IsScoped(const QMetaEnum* self);
int QMetaEnum_KeyCount(const QMetaEnum* self);
const char* QMetaEnum_Key(const QMetaEnum* self, int index);
int QMetaEnum_Value(const QMetaEnum* self, int index);
const char* QMetaEnum_Scope(const QMetaEnum* self);
int QMetaEnum_KeyToValue(const QMetaEnum* self, const char* key);
const char* QMetaEnum_ValueToKey(const QMetaEnum* self, int value);
int QMetaEnum_KeysToValue(const QMetaEnum* self, const char* keys);
libqt_string QMetaEnum_ValueToKeys(const QMetaEnum* self, int value);
QMetaObject* QMetaEnum_EnclosingMetaObject(const QMetaEnum* self);
bool QMetaEnum_IsValid(const QMetaEnum* self);
int QMetaEnum_KeyToValue2(const QMetaEnum* self, const char* key, bool* ok);
int QMetaEnum_KeysToValue2(const QMetaEnum* self, const char* keys, bool* ok);
void QMetaEnum_Delete(QMetaEnum* self);