QtBeef/src/Qt/qmetaobject.bf

	public bool InvokeOnGadget12(void* gadget, IQGenericReturnArgument returnValue, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4, IQGenericArgument val5, IQGenericArgument val6, IQGenericArgument val7, IQGenericArgument val8, IQGenericArgument val9)
	{
		return CQt.QMetaMethod_InvokeOnGadget12((.)this.ptr.Ptr, gadget, (.)returnValue?.ObjectPtr, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr, (.)val5?.ObjectPtr, (.)val6?.ObjectPtr, (.)val7?.ObjectPtr, (.)val8?.ObjectPtr, (.)val9?.ObjectPtr);
	}
	public bool InvokeOnGadget22(void* gadget, IQGenericArgument val0)
	{
		return CQt.QMetaMethod_InvokeOnGadget22((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr);
	}
	public bool InvokeOnGadget32(void* gadget, IQGenericArgument val0, IQGenericArgument val1)
	{
		return CQt.QMetaMethod_InvokeOnGadget32((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr);
	}
	public bool InvokeOnGadget42(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2)
	{
		return CQt.QMetaMethod_InvokeOnGadget42((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr);
	}
	public bool InvokeOnGadget52(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3)
	{
		return CQt.QMetaMethod_InvokeOnGadget52((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr);
	}
	public bool InvokeOnGadget62(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4)
	{
		return CQt.QMetaMethod_InvokeOnGadget62((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr);
	}
	public bool InvokeOnGadget72(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4, IQGenericArgument val5)
	{
		return CQt.QMetaMethod_InvokeOnGadget72((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr, (.)val5?.ObjectPtr);
	}
	public bool InvokeOnGadget82(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4, IQGenericArgument val5, IQGenericArgument val6)
	{
		return CQt.QMetaMethod_InvokeOnGadget82((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr, (.)val5?.ObjectPtr, (.)val6?.ObjectPtr);
	}
	public bool InvokeOnGadget92(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4, IQGenericArgument val5, IQGenericArgument val6, IQGenericArgument val7)
	{
		return CQt.QMetaMethod_InvokeOnGadget92((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr, (.)val5?.ObjectPtr, (.)val6?.ObjectPtr, (.)val7?.ObjectPtr);
	}
	public bool InvokeOnGadget102(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4, IQGenericArgument val5, IQGenericArgument val6, IQGenericArgument val7, IQGenericArgument val8)
	{
		return CQt.QMetaMethod_InvokeOnGadget102((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr, (.)val5?.ObjectPtr, (.)val6?.ObjectPtr, (.)val7?.ObjectPtr, (.)val8?.ObjectPtr);
	}
	public bool InvokeOnGadget112(void* gadget, IQGenericArgument val0, IQGenericArgument val1, IQGenericArgument val2, IQGenericArgument val3, IQGenericArgument val4, IQGenericArgument val5, IQGenericArgument val6, IQGenericArgument val7, IQGenericArgument val8, IQGenericArgument val9)
	{
		return CQt.QMetaMethod_InvokeOnGadget112((.)this.ptr.Ptr, gadget, (.)val0?.ObjectPtr, (.)val1?.ObjectPtr, (.)val2?.ObjectPtr, (.)val3?.ObjectPtr, (.)val4?.ObjectPtr, (.)val5?.ObjectPtr, (.)val6?.ObjectPtr, (.)val7?.ObjectPtr, (.)val8?.ObjectPtr, (.)val9?.ObjectPtr);
	}
}
interface IQMetaMethod : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QMetaEnum
// --------------------------------------------------------------
[CRepr]
struct QMetaEnum_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QMetaEnum_new")]
	public static extern QMetaEnum_Ptr QMetaEnum_new(void** other);
	[LinkName("QMetaEnum_new2")]
	public static extern QMetaEnum_Ptr QMetaEnum_new2(void** other);
	[LinkName("QMetaEnum_new3")]
	public static extern QMetaEnum_Ptr QMetaEnum_new3();
	[LinkName("QMetaEnum_new4")]
	public static extern QMetaEnum_Ptr QMetaEnum_new4(void** param1);
	[LinkName("QMetaEnum_Delete")]
	public static extern void QMetaEnum_Delete(QMetaEnum_Ptr self);
	[LinkName("QMetaEnum_Name")]
	public static extern c_char* QMetaEnum_Name(void* self);
	[LinkName("QMetaEnum_EnumName")]
	public static extern c_char* QMetaEnum_EnumName(void* self);
	[LinkName("QMetaEnum_IsFlag")]
	public static extern bool QMetaEnum_IsFlag(void* self);
	[LinkName("QMetaEnum_IsScoped")]
	public static extern bool QMetaEnum_IsScoped(void* self);
	[LinkName("QMetaEnum_KeyCount")]
	public static extern c_int QMetaEnum_KeyCount(void* self);
	[LinkName("QMetaEnum_Key")]
	public static extern c_char* QMetaEnum_Key(void* self, c_int index);
	[LinkName("QMetaEnum_Value")]
	public static extern c_int QMetaEnum_Value(void* self, c_int index);
	[LinkName("QMetaEnum_Scope")]
	public static extern c_char* QMetaEnum_Scope(void* self);
	[LinkName("QMetaEnum_KeyToValue")]
	public static extern c_int QMetaEnum_KeyToValue(void* self, c_char* key);
	[LinkName("QMetaEnum_ValueToKey")]
	public static extern c_char* QMetaEnum_ValueToKey(void* self, c_int value);
	[LinkName("QMetaEnum_KeysToValue")]
	public static extern c_int QMetaEnum_KeysToValue(void* self, c_char* keys);
	[LinkName("QMetaEnum_ValueToKeys")]
	public static extern void* QMetaEnum_ValueToKeys(void* self, c_int value);
	[LinkName("QMetaEnum_EnclosingMetaObject")]
	public static extern void** QMetaEnum_EnclosingMetaObject(void* self);
	[LinkName("QMetaEnum_IsValid")]
	public static extern bool QMetaEnum_IsValid(void* self);
	[LinkName("QMetaEnum_KeyToValue2")]
	public static extern c_int QMetaEnum_KeyToValue2(void* self, c_char* key, bool* ok);
	[LinkName("QMetaEnum_KeysToValue2")]
	public static extern c_int QMetaEnum_KeysToValue2(void* self, c_char* keys, bool* ok);
}
class QMetaEnum : IQMetaEnum
{
	private QMetaEnum_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QMetaEnum_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQMetaEnum other)
	{
		this.ptr = CQt.QMetaEnum_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QMetaEnum_new3();
	}
	public ~this()
	{
		CQt.QMetaEnum_Delete(this.ptr);
	}
	public c_char* Name()
	{
		return CQt.QMetaEnum_Name((.)this.ptr.Ptr);
	}
	public c_char* EnumName()
	{
		return CQt.QMetaEnum_EnumName((.)this.ptr.Ptr);
	}
	public bool IsFlag()
	{
		return CQt.QMetaEnum_IsFlag((.)this.ptr.Ptr);
	}
	public bool IsScoped()
	{
		return CQt.QMetaEnum_IsScoped((.)this.ptr.Ptr);
	}
	public c_int KeyCount()
	{
		return CQt.QMetaEnum_KeyCount((.)this.ptr.Ptr);
	}
	public c_char* Key(c_int index)
	{
		return CQt.QMetaEnum_Key((.)this.ptr.Ptr, index);
	}
	public c_int Value(c_int index)
	{
		return CQt.QMetaEnum_Value((.)this.ptr.Ptr, index);
	}
	public c_char* Scope()
	{
		return CQt.QMetaEnum_Scope((.)this.ptr.Ptr);
	}
	public c_int KeyToValue(c_char* key)
	{
		return CQt.QMetaEnum_KeyToValue((.)this.ptr.Ptr, key);
	}
	public c_char* ValueToKey(c_int value)
	{
		return CQt.QMetaEnum_ValueToKey((.)this.ptr.Ptr, value);
	}
	public c_int KeysToValue(c_char* keys)
	{
		return CQt.QMetaEnum_KeysToValue((.)this.ptr.Ptr, keys);
	}
	public void* ValueToKeys(c_int value)
	{
		return CQt.QMetaEnum_ValueToKeys((.)this.ptr.Ptr, value);
	}
	public QMetaObject_Ptr EnclosingMetaObject()
	{
		return QMetaObject_Ptr(CQt.QMetaEnum_EnclosingMetaObject((.)this.ptr.Ptr));
	}
	public bool IsValid()
	{
		return CQt.QMetaEnum_IsValid((.)this.ptr.Ptr);
	}
	public c_int KeyToValue2(c_char* key, bool* ok)
	{
		return CQt.QMetaEnum_KeyToValue2((.)this.ptr.Ptr, key, ok);
	}
	public c_int KeysToValue2(c_char* keys, bool* ok)
	{
		return CQt.QMetaEnum_KeysToValue2((.)this.ptr.Ptr, keys, ok);
	}
}
interface IQMetaEnum : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QMetaProperty
// --------------------------------------------------------------
[CRepr]
struct QMetaProperty_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
